adding process photos to Trailhead

--- a/projects/trailhead.html
+++ b/projects/trailhead.html
@@ -64,6 +64,9 @@
 			<div class="content_text">
 					The trip planning process involves two main stages: 1) Planning trip information and managing sign-ups, and 2) Acquiring vehicle rentals, equipment, and a credit card ("p-card"). The former is managed through paper sign-ups, spreadsheets, and emails. The latter involves the Outdoor Programs Office, a group of staff who use whiteboards and paper/pencil to approve and track trips. Trailhead should act as a centralized platform for all planning activities
 			</div>
+			<img class="summary_image" src="../assets/trailhead-whiteboard.png"/>
+			<div class="image_text">Vehicle Calendar Whiteboard</div>
+			<br>
 			<div class="card_title">Competitor Research</div>
 			<br>
 		<img class="summary_image" src="../assets/trailhead-1.png"/>
@@ -75,6 +78,17 @@
 		<br>
 		<img class="summary_image" src="../assets/trailhead-4.png"/>
 		<img class="summary_image" src="../assets/trailhead-5.png"/>
+		<br>
+		<div class="card_title">Screenshots of Live Site</div>
+		<br>
+		<img class="summary_image" src="../assets/trailhead-cover2.png"/>
+		<div class="image_text">Landing Page</div>
+		<img class="summary_image" src="../assets/trailhead-final-1.png"/>
+		<div class="image_text">Trips Sign-Up Dialogg</div>
+		<img class="summary_image" src="../assets/trailhead-final-2.png"/>
+		<div class="image_text">Vehicle Calendar Dialog</div>
+		<img class="summary_image" src="../assets/trailhead-final-3.png"/>
+		<div class="image_text">"Create a Trip" Form</div>
     </div>
     <div class="footer">
         Regina Yan © 2021
