fixing imagesnot showing up

--- a/branding.html
+++ b/branding.html
@@ -99,7 +99,7 @@
 				<div class="card_tag">Fiber Arts</div>
 			</a>
 			<a href="projects/candydots.html" class="card">
-				<img class="card_image" src="assets/candydots-cover.JPG"/>
+				<img class="card_image" src="assets/candydots-cover.jpg"/>
 				<div class="card_title">Candy Dots</div>
 				<div class="card_description">A bobble blanket that took a long time, partly due to my slow speed but also due to craft stores running out of the colors I needed (which I guess is also my fault)</div>
 				<div class="card_tag">Fiber Arts</div>
