--- a/misc.html
+++ b/misc.html
@@ -21,7 +21,7 @@
 
 <body>
 	<div class="head">
-		<a href="index.html"><img class="logo" id="logo" src="assets/regina-logo.svg" alt="Regina Yan"></a>
+			<a href="index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
 				<a href="uiux.html" class="unselected">UX</a>
