--- a/projects/clouds.html
+++ b/projects/clouds.html
@@ -19,9 +19,8 @@
 </head>
 <body>
 	<div class="head">
-			<a href="../index.html"><img class="logo" id="logo" src="../assets/regina-logo.svg" alt="Regina Yan"></a>
+			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
-			<!-- <a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a> -->
 			<div class="topnav" id="myTopnav">
 				<a href="../uiux.html" class="unselected">UX</a>
 				<a href="../illustration.html" class="unselected">Digital</a>
