--- a/projects/dartmouthdays.html
+++ b/projects/dartmouthdays.html
@@ -19,8 +19,7 @@
 </head>
 <body>
 	<div class="head">
-		<!-- <div style="padding-top: 35px;"></div> -->
-		<a href="../index.html"><img class="logo" id="logo" src="../assets/regina-logo.svg" alt="Regina Yan"></a>
+			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
 				<a href="../uiux.html" class="unselected">UX</a>
