--- a/about.html
+++ b/about.html
@@ -121,12 +121,46 @@
 			<br/><br/>				
 				I graduated from Dartmouth College in 2019 with a major in Engineering modified with Studio Art and a minor in Human-Centered Design. I'm primarily interested in product and UI/UX design and am inspired by solutions that positively impact our community and environment. Currently I'm in Arlington, VA designing DevOps capabilities and spearheading product illustrations at Appian.
 			</div>
-			<!-- <a href="#container_content"><button class="button_circle_arrow" >
+			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
-			</button></a> -->
+			</button></a>
 			</div>
 	</div>
-	<div id="container_content" style="padding-top: 150px;"></div>
+	<div id="container_content" style="padding-top: 100px;"></div>
+	<div class="container_content_stack vertical">
+			
+	<div class="container_sideBySide"> 
+			<div class="content_text width_50">
+					<div class="section_title"><img class="section_icon" src="assets/regina-resume_experience.svg">Experience</div>
+				<b>UX Designer II @ Appian</b><br/>
+				2019 - Present<br/>
+				Designing guided app-building experiences and developer operations tools; Spearheading the product illustration initiative with an emphasis on inclusivity<br/><br/>
+				<b>Designer & Design Lead @ DALI Lab</b><br/>
+				2016 - 2019<br/>
+				Designed and deployed mobile and web apps for project partners; Provided mentorship to designers; Served on core mentoring staff to guide the direction of the Lab<br/><br/>
+				
+				<div class="section_title"><img class="section_icon" src="assets/regina-resume_interests.svg">Interests</div>
+				Rock climbing, bikepacking, DIY-ing, Cooking Thai food, eating dark chocolate, petting our dog<br/><br/>
+				</div>
+
+
+				<div class="content_text width_50">
+						<div class="section_title"><img class="section_icon" src="assets/regina-resume_education.svg">Education</div>
+					<b>Dartmouth College '19</b><br/>
+					B.A. in Engineering & Studio Art<br/>
+					Dartmouth Outing Club, Figure Skating Team, DALI Lab, Alpha Xi Delta<br/><br/>
+					
+					<div class="section_title"><img class="section_icon" src="assets/regina-resume_skills.svg">Skills</div>
+					<b>Software</b><br/>
+					Adobe Illustrator, Photoshop, InDesign, PremierePro<br/><br/>
+					<b>Languages</b><br/>
+					French (fluent-ish), Chinese (speaking), HTML/CSS, Javascript <br/><br/>
+					<b>UX</b><br/>
+					Prototyping Tools (Sketch/Figma/Invision/After Effects), Design Thinking Process<br/>
+					</div>
+				</div>
+		</div>
+	</div>
 	<!-- <div class="container_content">
 		<div class="container_resume">
 			<div class="card_title">Resume</div>
