--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
 				Designed and deployed mobile and web apps for project partners; Provided mentorship to designers; Served on core mentoring staff to guide the direction of the Lab<br/><br/>
 				
 				<div class="section_title"><img class="section_icon" src="assets/regina-resume_interests.svg">Interests</div>
-				Rock climbing, bikepacking, DIY-ing, Cooking Thai food, eating dark chocolate, petting our dog<br/><br/>
+				Rock climbing, bikepacking, DIY-ing, cooking Thai food, eating dark chocolate, petting our dog<br/><br/>
 				</div>
 
 
