another image not loading

--- a/branding.html
+++ b/branding.html
@@ -69,7 +69,7 @@
 				<div class="card_tag">Fiber Arts</div>
 			</a>
 			<a href="projects/colorfactory.html" class="card">
-				<img class="card_image" src="assets/colorfactory-cover.JPG"/>
+				<img class="card_image" src="assets/colorfactory-cover.jpg"/>
 				<div class="card_title">Color Factory</div>
 				<div class="card_description"> An introduction to punch needling where, as expected, I dive right in with a large-scale project</div>
 				<div class="card_tag">Fiber Arts</div>
