--- a/about.html
+++ b/about.html
@@ -126,8 +126,9 @@
 			</button></a>
 			</div>
 	</div>
-	<div id="container_content" style="padding-top: 100px;"></div>
-	<div class="container_content_stack vertical">
+	<!-- <div id="container_content" style="padding-top: 100px;"></div> -->
+	<div class="container_content_wrapper">
+	<div class="container_content_wrapper_content vertical">
 			
 	<div class="container_sideBySide"> 
 			<div class="content_text width_50">
@@ -160,6 +161,7 @@
 					</div>
 				</div>
 		</div>
+	</div>
 	</div>
 	<!-- <div class="container_content">
 		<div class="container_resume">
