about page tweaks

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 <!-- <div class="padding_nav"></div> -->
 <div class="content">
 	<!-- <div class="header_home"></div> -->
-	<div class="container_summary">
+	<div class="container_summary_short">
 		<div class="section_summary">
 			<div class="caption_container">
 				<img class="summary_image profile_static" src="assets/reggie.JPG"/>
