--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -149,6 +149,10 @@
                     <img class="summary_image" src="../assets/doodle-24.jpg"/>
                     <div class="image_text"><b>Doodle no.24 |  </b>My dad and I have lost monopoly many times in a row because my brother keeps maxing out the most expensive property and we KEEP LANDING ON IT 🙈🤑💸</div>
             </div>
+            <div class="sideBySideItem width_50">
+                    <img class="summary_image" src="../assets/doodle-25.jpg"/>
+                    <div class="image_text"><b>Doodle no.25 |  </b>Showing my brother who’s BOSS 😎💦</div>
+            </div>
         </div>
     </div>
 </div>
