added doodle images

--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -153,6 +153,15 @@
                     <img class="summary_image" src="../assets/doodle-25.jpg"/>
                     <div class="image_text"><b>Doodle no.25 |  </b>Showing my brother who’s BOSS 😎💦</div>
             </div>
+            <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-26.jpg"/>
+                <div class="image_text"><b>Doodle no.26 |  </b>Weather has been awfully rainy lately, but on the bright side we’ve had some BEAUTIFUL panoramic rainbows! 🌈</div>
+                </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-27.jpg"/>
+                <div class="image_text"><b>Doodle no.27 |  </b>A weekend trip to one of my favorite places in the world, the Omaha zoo, woohoo! 🐠🐯</div>
+        </div>
+            
         </div>
     </div>
 </div>
