--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -161,6 +161,10 @@
                 <img class="summary_image" src="../assets/doodle-27.jpg"/>
                 <div class="image_text"><b>Doodle no.27 |  </b>A weekend trip to one of my favorite places in the world, the Omaha zoo, woohoo! 🐠🐯</div>
         </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-28.jpg"/>
+                <div class="image_text"><b>Doodle no.28 |  </b>Back in the gym after a year and a half away! Feels so good to try hard, and it’s even better when you find a group of strong women to support & inspire you 💪🏼🧗🏻‍♀️</div>
+        </div>
             
         </div>
     </div>
