added springtime stool proj, updated physical tab name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="topnav" id="myTopnav">
 			<a href="uiux.html" class="unselected">UX</a>
 			<a href="illustration.html" class="unselected">Digital</a>
-			<a href="branding.html" class="unselected">Physical</a>
+			<a href="physical.html" class="unselected">Physical</a>
 			<a href="misc.html" class="unselected">Adventures</a>
 			<a href="about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
@@ -45,16 +45,6 @@
 				This site is under construction during summer 2021 (devs, there are bugs! uxds, shield your eyes!) but write-ups will be written and code will be coded soon!
 			</div>
 		</div>
-		<!-- <div class="container_cards">
-			<div class="card">
-				<img class="card_image" src="assets/dog_tile.png"/>
-				<div class="card_title"> Name of Project</div>
-				<div class="card_description"> A question description of what this project is, and hopefully this covers a few lines and feels somewhat substantial</div>
-				<div class="card_tag">Case Study</div>
-			</div>
-			<div class="card"></div>
-			<div class="card"></div>
-		</div> -->
 	</div>
 	</div>
 
