--- a/physical.html
+++ b/physical.html
@@ -25,7 +25,7 @@
 			<div class="topnav" id="myTopnav">
 				<a href="uiux.html" class="unselected">UX</a>
 				<a href="illustration.html" class="unselected">Digital</a>
-				<a href="branding.html" class="active">Physical</a>
+				<a href="physical.html" class="active">Physical</a>
 				<a href="misc.html" class="unselected">Adventures</a>
 				<a href="about.html" class="unselected">About</a>
 				<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
@@ -50,10 +50,10 @@
 				I call this entire process "tinkering" because I approach this as a casual and admittedly amateur form of experimentation, but I've thoroughly enjoyed the process of getting thoughts out of my head and making real, tangible things.
 				</div>
 			</div>
-			<a href="projects/pilot.html" class="card">
-				<img class="card_image" src="assets/pilot-cover.jpg"/>
-				<div class="card_title">Pilot</div>
-				<div class="card_description">The project that started it all. And by "it", I mean a newfound yarn obsession</div>
+			<a href="projects/springtime.html" class="card">
+				<img class="card_image" src="assets/stool-1.png"/>
+				<div class="card_title">Springtime</div>
+				<div class="card_description">A handmade stool and cushion inspired by spring flowers</div>
 				<div class="card_tag">Fiber Arts</div>
 			</a>
 			<a href="projects/climbingwall.html" class="card">
@@ -62,16 +62,22 @@
 				<div class="card_description">The hardest thing I've ever done and the proudest I've ever been! My personal free-standing woody</div>
 				<div class="card_tag">Wood</div>
 			</a>
-			<a href="projects/flow.html" class="card">
-				<img class="card_image" src="assets/flow-cover.jpg"/>
-				<div class="card_title">Flow</div>
-				<div class="card_description">Weaving inspired by the flow of  water and sand mixing on the beach</div>
+			<a href="projects/pilot.html" class="card">
+				<img class="card_image" src="assets/pilot-cover.jpg"/>
+				<div class="card_title">Pilot</div>
+				<div class="card_description">The project that started it all. And by "it", I mean a newfound yarn obsession</div>
 				<div class="card_tag">Fiber Arts</div>
 			</a>
 			<a href="projects/colorfactory.html" class="card">
 				<img class="card_image" src="assets/colorfactory-cover.jpg"/>
 				<div class="card_title">Color Factory</div>
 				<div class="card_description"> An introduction to punch needling where, as expected, I dive right in with a large-scale project</div>
+				<div class="card_tag">Fiber Arts</div>
+			</a>
+			<a href="projects/flow.html" class="card">
+				<img class="card_image" src="assets/flow-cover.jpg"/>
+				<div class="card_title">Flow</div>
+				<div class="card_description">Weaving inspired by the flow of  water and sand mixing on the beach</div>
 				<div class="card_tag">Fiber Arts</div>
 			</a>
 			<a href="projects/geode.html" class="card">
