--- a/projects/springtime.html
+++ b/projects/springtime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Flow</title>
+	<title>Regina | Springtime</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
@@ -37,14 +37,14 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/flow-cover.jpg"/>
+				<img class="summary_image" src="../assets/stool-1.png"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title">Flow</div>
+			<div class="summary_title">Springtime</div>
 			<br/>
 			<div class="summary_description"> 
-                During the pandemic, I spent some time living in a beautiful wooden garage at my boyfriend's family's home on Long Island. The long summer days began at the crack of dawn, stuffing a slice of bread in our mouths as we raced to the beach, and catching as many waves as we could before 8am standup. It was the happiest of times, and it inspired this weaving which illustrates the sand patterns made by the waves. And, thanks to my boyfriend's dad's woodworking studio, I made a sturdy loom frame - a major upgrade from the yardstick in <a href="pilot.html" class="link">Pilot</a>!
+                I had the joy of staying home with my family in Kansas for a few months while working remotely during the COVID-19 pandemic. We spent countless evenings playing my brother's favorite game, Monopoly, which usually lasted 3+ hours per game since no one could admit they had lost haha! My mom mentioned at one point that her Rubbermaid step stool she was sitting on during these long games was giving her some back pain since it was a bit too low. As a thank-you gift for the wonderful time at home, I made this "Springtime" stool that gave some extra cushioning and comfort at the perfect height.
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -53,19 +53,22 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-		<div class="content_text">I made the wooden frame from a couple 1x4's and arranged nails in a zig-zag fashion (when I tried to nail them in in a straight line, the wooden started splitting). I used Everbilt cotton twin rope for the "warp" (vertical strings that run the length of the weaving), and the cardboard pieces at the bottom keep the wool from snagging on the nails and gives me enough yarn to evenly tie up the bottom afterwards.</div>
-		<img class="summary_image" src="../assets/flow-progress1.jpg"/>
-		<div class="content_text">Close-up of the yarn. I used fluffy sheep's wool to mimic the waves (and also make this project go faster!). The orange and speckled grey yarn fringes ("Rya knot") represent the textured sand.</div>
-		<img class="summary_image" src="../assets/flow-progress2.jpg"/>
+        <div class="content_text">I made this stool from a 2x2x8 and 1/2 in. piece of plywood. I didn't make a sketch beforehand, but I knew I wanted something a little funkier than a standard boxy stool. The seat is a stretched hexagonal shape and the legs are slightly angled to create a trapezoid.</div>
+        <img class="summary_image" src="../assets/stool-5.jpg"/>
+        <div class="content_text">The punch needled cushion took the longest -- I initially used an embroidery hoop but soon made a small wooden frame for the cushion. I wanted the flowers to feel slightly raised above the green grass background, so I punch needled the background and foreground on separate sides of the fabric</div>
+        <img class="summary_image" src="../assets/stool-4.jpg"/>
+		<div class="content_text">Close-up view of the "Springtime" pattern. I used the Airtex 2" High Density Foam for the cushion and used a staple gun to attach the fabric to the wood</div>
+        <img class="summary_image" src="../assets/stool-3.jpg"/>
+		<div class="content_text">Top view of the stool</div>
+		<img class="summary_image" src="../assets/stool-2.jpg"/>
     </div>
-    <div class="footer">
+</div>
+<div class="footer">
         Regina Yan © 2021
         <div>
             <i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
         </div>
     </div>
-</div>
-
 </body>
 <script>
 	$(document).ready(function(){
@@ -94,7 +97,7 @@
 	});
 </script>
 <script type="text/javascript">
-function clickNav() {
+	function clickNav() {
 		var x = document.getElementById("myTopnav");
 		var logo = document.getElementById("logo");
 		if (x.className === "topnav") {
