--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 			<div class="topnav" id="myTopnav">
 				<a href="uiux.html" class="unselected">UX</a>
 				<a href="illustration.html" class="unselected">Digital</a>
-				<a href="branding.html" class="unselected">Physical</a>
+				<a href="physical.html" class="unselected">Physical</a>
 				<a href="misc.html" class="unselected">Adventures</a>
 				<a href="about.html" class="active">About</a>
 				<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
