--- a/designthinking.html
+++ b/designthinking.html
@@ -16,7 +16,7 @@
 				<a href="designthinking.html" class="active">Design Thinking</a>
 				<a href="uiux.html" class="unselected">UI/UX</a>
 				<a href="illustration.html" class="unselected">Illustration</a>
-				<a href="branding.html" class="unselected">Branding</a>
+				<a href="physical.html" class="unselected">Branding</a>
 				<a href="misc.html" class="unselected">Miscellaneous</a>
 				<a href="about.html" class="unselected">About</a>
 				<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
