--- a/projects/humbug.html
+++ b/projects/humbug.html
@@ -24,7 +24,7 @@
 		<div class="topnav" id="myTopnav">
 			<a href="../uiux.html" class="unselected">UI/UX & Dev</a>
 			<a href="../illustration.html" class="unselected">Illustration</a>
-			<a href="../branding.html" class="active">Branding</a>
+			<a href="../physical.html" class="active">Branding</a>
 			<a href="../misc.html" class="unselected">Miscellaneous</a>
 			<a href="../about.html" class="unselected">About</a>
 			<a href="javascript:void(0);" class="icon" onclick="clickNav()"><i class="fa fa-bars"></i></a>
