--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -165,6 +165,26 @@
                 <img class="summary_image" src="../assets/doodle-28.jpg"/>
                 <div class="image_text"><b>Doodle no.28 |  </b>Back in the gym after a year and a half away! Feels so good to try hard, and it’s even better when you find a group of strong women to support & inspire you 💪🏼🧗🏻‍♀️</div>
         </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-29.jpg"/>
+                        <div class="image_text"><b>Doodle no.29 |  </b>Our little chicks are getting bigger (and louder!!) 🐥</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-30.jpg"/>
+                        <div class="image_text"><b>Doodle no.30 |  </b>Picked up Karen and Michael from the airport, it’s a full Yan house now 🏡 let the chaos begin!</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-31.jpg"/>
+                        <div class="image_text"><b>Doodle no.31 |  </b>The best part of being with the sibs is watching all our old embarrassing videos together 😂📹</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-32.jpg"/>
+                        <div class="image_text"><b>Doodle no.32 |  </b>Moved back to DC wahoo! 🦴👯‍♀️🏠</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-33.jpg"/>
+                        <div class="image_text"><b>Doodle no.33 |  </b>Ah yes, the classic flash flood that knocks down an ENTIRE TREE RIGHT BEHIND YOU ON THE TRAIL ⚡️🌳😱</div>
+        </div>
             
         </div>
     </div>
