updated doodles, added appian rebrand

--- a/illustration.html
+++ b/illustration.html
@@ -54,13 +54,12 @@
 				<div class="card_description"> A product illustration initiative I started to introduce graphics to the platform with an emphasis on enhancing user experience and promoting inclusivity</div>
 				<div class="card_tag">Product Illustration</div>
 			</a>
-			<!-- <div class="card">
+			<a href="projects/appian-illustrations-updated.html" class="card">
 				<img class="card_image" src="assets/appian-rebrand.png"/>
 				<div class="card_title">Appian Product Illustrations: Rebrand</div>
-				<div class="card_description">Revamping illustrations to match Appian's new marketing rebrand. Read on to see how our team adapted to new styles while still maintaining our core values</div>
-				<div class="card_description">A year after our illustrations took off, the company went through a complete rebrand, which meant the illustrations needed a new look. Read on to see how our team adapted to new styles but still maintained our core values</div>
+				<div class="card_description"> A product illustration initiative I started to introduce graphics to the platform with an emphasis on enhancing user experience and promoting inclusivity</div>
 				<div class="card_tag">Product Illustration</div>
-			</div> -->
+			</a>
 			<a href="projects/dartmouthdays.html" class="card">
 				<img class="card_image" src="assets/dartmouth-cover.png"/>
 				<div class="card_title">The Dartmouth Days</div>
