--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -185,6 +185,26 @@
                         <img class="summary_image" src="../assets/doodle-33.jpg"/>
                         <div class="image_text"><b>Doodle no.33 |  </b>Ah yes, the classic flash flood that knocks down an ENTIRE TREE RIGHT BEHIND YOU ON THE TRAIL ⚡️🌳😱</div>
         </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-34.jpg"/>
+                <div class="image_text"><b>Doodle no.34 |  </b>A brief but beautiful return to the Upper Valley ⛰</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-35.jpg"/>
+                <div class="image_text"><b>Doodle no.35 |  </b>Scenic bouldering with a strong lady! 🧗🏻‍♀️</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-36.jpg"/>
+                <div class="image_text"><b>Doodle no.36 |  </b>Reunited!!! 😃😃😃</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-37.jpg"/>
+                <div class="image_text"><b>Doodle no.37 |  </b>Had a lovely weekend surfing and hanging out in Atlantic City, but the real highlight was Shep getting a 2 second cameo on a @bengravyy video let’s gooo🍍🏄🏼‍♂️</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                <img class="summary_image" src="../assets/doodle-38-41.jpg"/>
+                <div class="image_text"><b>Doodles no.38-41 |  </b>Reggie on a roll! Lower production value because I didn’t bring my iPad, but I’ve got a sketchbook to document the bike adventure!</div>
+        </div>
             
         </div>
     </div>
