--- a/uiux.html
+++ b/uiux.html
@@ -58,6 +58,12 @@
 				<div class="card_description">As a UX Designer at Appian, I work on features for the platform's DevOps capabilities, advocate for UX best practices on Customer Success projects, and lead a product illustration team</div>
 				<div class="card_tag">UX</div>
 			</a>
+			<a href="projects/trailhead2.html" class="card">
+				<img class="card_image" src="assets/trailhead23.png"/>
+				<div class="card_title">Trailhead 2.0</div>
+				<div class="card_description">Second Time's the Charm! A redesign of the beloved original to upgrade user experience and add some "crunchy" personality</div>
+				<div class="card_tag">UX</div>
+			</a>
 			<a href="projects/trailhead.html" class="card">
 				<img class="card_image" src="assets/trailhead-cover.jpg"/>
 				<div class="card_title">Trailhead</div>
