--- a/physical.html
+++ b/physical.html
@@ -50,6 +50,12 @@
 				I call this entire process "tinkering" because I approach this as a casual and admittedly amateur form of experimentation, but I've thoroughly enjoyed the process of getting thoughts out of my head and making real, tangible things.
 				</div>
 			</div>
+			<a href="projects/metro.html" class="card">
+				<img class="card_image" src="assets/metro-cover.jpg"/>
+				<div class="card_title">Ode to Metro</div>
+				<div class="card_description">Handmade stools inspired by the good and the bad of WMATA</div>
+				<div class="card_tag">Fiber Arts</div>
+			</a>
 			<a href="projects/springtime.html" class="card">
 				<img class="card_image" src="assets/stool-1.png"/>
 				<div class="card_title">Springtime</div>
