--- a/projects/doodle2021.html
+++ b/projects/doodle2021.html
@@ -205,6 +205,23 @@
                 <img class="summary_image" src="../assets/doodle-38-41.jpg"/>
                 <div class="image_text"><b>Doodles no.38-41 |  </b>Reggie on a roll! Lower production value because I didn’t bring my iPad, but I’ve got a sketchbook to document the bike adventure!</div>
         </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-42.jpg"/>
+                        <div class="image_text"><b>Doodle no.42 |  </b>Reggie on a roll finale! Now back to real life 😭</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-43.jpg"/>
+                        <div class="image_text"><b>Doodle no.43 |  </b>The best kind of work remote setup! 💻🚙🏄🏻‍</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-44.jpg"/>
+                        <div class="image_text"><b>Doodle no.44 |  </b>The roomie monster mash! 🎃</div>
+        </div>
+        <div class="sideBySideItem width_50">
+                        <img class="summary_image" src="../assets/doodle-45.jpg"/>
+                        <div class="image_text"><b>Doodle no.44 |  </b>It’s been a weird week, but keeping myself grounded thru peaceful morning rides to the climbing gym 🌒🚴🏻‍♀️</div>
+        </div>
+
             
         </div>
     </div>
