adding category doodles

--- a/illustration.html
+++ b/illustration.html
@@ -35,17 +35,20 @@
 	<div class="padding_nav"></div>
 	<div class="content">
 		<!-- <div class="header_home"></div> -->
-		<div class="parallax_category"><div class="category_title">Digital Projects</div></div>
+		<div class="category">
+				<img class="category_image" src="assets/website-doodle_digital.svg"/>
+			<div class="category_title">Digital Projects</div>
+		</div>
 		<div class="container_cards">
 			<div class="card_category">
 					<div class="card_category_title">Illustration, Branding and Doodling</div>
 					<br/>
 					<div class="card_category_description">
-						My love for digital illustration started with my entry for a local figure skating competition's event logo in 9th grade. The whole thing was made in Microsoft Paint and obviously did not win.
+						My love for digital illustration started with my entry for a local figure skating competition's event logo in 9th grade. I made the whole thing in Microsoft Paint and obviously did not win.
 					</br></br>
 					<img class="card_image tiny" src="assets/skating-logo.png"/>
 				</br></br>
-						Fast foward to now. Equipped with the power of Adobe Creative Suite and the mighty pen tool (and sidekick command-Z), I've had the chance to work on some pretty cool projects. From thinking about representation in product illustration to making logos for community groups, I've loved exploring the realm of digital art, and I think 15-year old me would be proud.
+						But fast foward to now. Equipped with the power of Adobe Creative Suite and the mighty pen tool (and sidekick command-Z), I've had the chance to work on some pretty cool projects. From thinking about representation in product illustration to making logos for community groups, I've loved exploring the realm of digital art, and I think 15-year old me would be proud.
 					</div>
 				</div>
 			<a href="projects/appian-illustrations.html" class="card">
