--- a/physical.html
+++ b/physical.html
@@ -34,9 +34,10 @@
 	</div>
 	<div class="padding_nav"></div>
 	<div class="content">
-		<div class="parallax_category">
-			<div class="category_title">Physical Projects</div>
-		</div>
+			<div class="category">
+					<img class="category_image" src="assets/website-doodle_physical.svg"/>
+				<div class="category_title">Physical Projects</div>
+			</div>
 		<div class="container_cards">
 			<div class="card_category">
 				<div class="card_category_title">Tinkering with Fiber Arts and Wood</div>
@@ -47,7 +48,7 @@
 				My first wood project was my climbing wall, by far my most daunting and rewarding project. That led to a few smaller projects which I've also documented here.
 				<br/>
 				<br/>
-				I call this entire process "tinkering" because I approach this as a casual and admittedly amateur form of experimentation, but I've thoroughly enjoyed the process of getting thoughts out of my head and making real, tangible things.
+				I call this entire process "tinkering" because I approach this as a casual and admittedly amateur form of experimentation, but I've thoroughly enjoyed the process of getting thoughts out of my head and turning my ideas into real, tangible things.
 				</div>
 			</div>
 			<a href="projects/metro.html" class="card">
