--- a/uiux.html
+++ b/uiux.html
@@ -36,8 +36,9 @@
 	<div class="padding_nav"></div>
 	<div class="content">
 		<!-- <div class="header_home"></div> -->
-		<div class="parallax_category">
-			<div class="category_title"> UX & DEV</div>
+		<div class="category">
+				<img class="category_image" src="assets/website-doodle_ux.svg"/>
+			<div class="category_title">UX & Dev</div>
 		</div>
 		<div class="container_cards">
 			<div class="card_category">
