--- a/misc.html
+++ b/misc.html
@@ -35,14 +35,15 @@
 	</div>
 	<div class="padding_nav"></div>
 	<div class="content">
-		<div class="parallax_category">
-			<div class="category_title">Adventures</div>
-		</div>
+			<div class="category">
+					<img class="category_image" src="assets/website-doodle_adventures.svg"/>
+				<div class="category_title">Adventures</div>
+			</div>
 		<div class="container_cards">
 				<div class="card">
 						<img class="card_image" src="assets/southafrica-cover.png"/>
 						<div class="card_title">Coming Soon!</div>
-						<div class="card_description">Trip Videos, musings about life, thoughts on outdoors accessibility... all coming soon when I get a lil free time!</div>
+						<div class="card_description">Trip Videos, musings about life, thoughts on outdoors accessibility... it's all on the backlog!</div>
 						
 					</div>
 		</div>
