fixing color change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="content">
 		<!-- <div class="header_home"></div> -->
 		<div class="parallax">
-			<div class="category_title fullwidth">Hi there, I'm Regina</div>
+			<div class="site_title fullwidth">Hi there, I'm Regina</div>
 			<div class="category_subtitle halfwidth">
 				A designer and engineer with a passion for the outdoors and human-centered design
 			</br></br>
